added header and nav

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
 </head>
 
 <body>
-    <h1>No Problemo</h1>
+    <header>
+        <h1>No Problemo</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#tracker">Tracker</a></li>
+                <li><a href="#">Login|Signup</a></li>
+            </ul>
+        </nav>
+    </header>
+
 </body>
 
 </html>
